# pulumi-azure-tutorial

./: README.md  pyproject.toml
.github/: check_version.yaml
.github/workflows/: check_version.yaml
quickstart/: Pulumi.yaml  __main__.py  index.html
