[tool.poetry]
name = "pulumi-azure-tutorial"
version = "0.2.2"
description = "Example of code to deploy a static webpage to azure using pulumi"
authors = ["joseph-palmer <22678593+joseph-palmer@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "pulumi_azure_tutorial"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
